name:           ConduitNetworkTransformClient
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         fabian
license:        GPL-3

executable ConduitNetworkTransformClient
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   conduit,
                   network-conduit,
                   blaze-builder-conduit
  ghc-options:     -Wall

